[project]
name = "pvfutility-mcp"
version = "1.0.0"
description = "pvfUtility WebApi MCP Server - 为pvfUtility软件提供MCP接口"
authors = [
    {name = "Assistant", email = "assistant@example.com"}
]
readme = "README_MCP.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8.0",
    "mcp>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/pvfutility/pvfUtilityWebApi"
Repository = "https://github.com/pvfutility/pvfUtilityWebApi"

[project.scripts]
pvfutility-mcp = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]